# orbit

./: .cursorrules  .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  GENERICS_IMPLEMENTATION.md  METHODS_TESTS.md  README.md  build.zig  build.zig.zon  debug_generic.ob  debug_simple.ob
benches/: orbit_bench.rs
example/: fib.ob  generics.ob  generics_function.ob  method.ob  prime.ob  sizeof.ob  slice.ob  struct.ob  sum.ob
lib/: std.io  std.ob
logs/: bench_report_20250725153059_cd02ab6.md
orbit-mode/: README.md  package-lock.json  package.json
spec/: 01-introduction.md  02-lexical-structure.md  03-types.md  04-variables-constants.md  05-expressions.md  06-statements.md  07-functions.md  08-structs-methods.md  09-generics.md  10-builtin-data-structures.md  11-memory-management.md  12-standard-library.md  13-grammar-reference.md  14-virtual-machine.md  15-command-line-interface.md  16-dead-code-elimination.md  17-compiler-pipeline.md  README.md
src/: ast.rs  ast.zig  ast_visitor.rs  codegen.rs  compiler.rs  compiler.zig  dead_code_elimination.rs  debugger.zig  desugar.rs  desugar.zig  diagnostics.rs  formatter.rs  jit.rs  jit.zig  label_resolution.rs  lexer.rs  lexer.zig  lib.rs  main.rs  main.zig  monomorphization.rs  monomorphization.zig  parser.rs  parser.zig  profiler.rs  runtime.rs  runtime.zig  tui.zig  typecheck.rs  typecheck.zig  utils.zig  vm.rs  vm.zig
test/: associated_function.ob  calc_squares.ob  fib_20.ob  fib_30.stdout  generics_method.ob  hex.stdout  map.ob  slice.ob  vec.ob  vec.stdout
tests/: bench_validation.rs  diagnostics_integration_tests.rs  (+5 more)
(+148 files in other folders)
